// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canonical Most Read Page A11y I can see the skip to content link 1`] = `"Bỏ qua để xem nội dung"`;

exports[`Canonical Most Read Page Analytics ATI 1`] = `"<img height="1px" width="1px" alt="" style="position:absolute" src="https://logws1363.ati-host.net?s=598343&amp;s2=97&amp;p=vietnamese.popular.read.page&amp;x2=[responsive]&amp;x3=[news-vietnamese]&amp;x4=[vi]&amp;x7=[list-datadriven]&amp;x8=[simorgh-nojs]&amp;x9=[%C4%90%E1%BB%8Dc%2520nhi%E1%BB%81u%2520nh%E1%BA%A5t%2520-%2520BBC%2520News%2520Ti%E1%BA%BFng%2520Vi%E1%BB%87t]&amp;x11=[2023-06-19T14%3A57%3A00Z]&amp;x12=[2023-06-19T15%3A12%3A00Z]"/>"`;

exports[`Canonical Most Read Page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, Tiếng Việt",
  "url": "/vietnamese",
}
`;

exports[`Canonical Most Read Page Footer Anchors should match text and url 2`] = `
{
  "text": "Tại sao bạn có thể tin tưởng BBC News",
  "url": "https://www.bbc.com/vietnamese/institutional-49283563",
}
`;

exports[`Canonical Most Read Page Footer Anchors should match text and url 3`] = `
{
  "text": "Điều khoản sử dụng",
  "url": "https://www.bbc.com/vietnamese/institutional-37622991",
}
`;

exports[`Canonical Most Read Page Footer Anchors should match text and url 4`] = `
{
  "text": "Về BBC",
  "url": "https://www.bbc.com/vietnamese/institutional-37623840",
}
`;

exports[`Canonical Most Read Page Footer Anchors should match text and url 5`] = `
{
  "text": "Chính sách riêng tư",
  "url": "https://www.bbc.com/vietnamese/institutional-37623841",
}
`;

exports[`Canonical Most Read Page Footer Anchors should match text and url 6`] = `
{
  "text": "Cookie",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical Most Read Page Footer Anchors should match text and url 7`] = `
{
  "text": "Liên hệ BBC",
  "url": "https://www.bbc.co.uk/vietnamese/send/u50853951",
}
`;

exports[`Canonical Most Read Page Footer Anchors should match text and url 8`] = `
{
  "text": "Tìm hiểu cách chúng tôi tiếp cận việc dẫn tới trang ngoài",
  "url": "https://www.bbc.com/editorialguidelines/guidance/feeds-and-links",
}
`;

exports[`Canonical Most Read Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/vietnamese"`;

exports[`Canonical Most Read Page Footer I can see the footer copyright and external linking text 1`] = `"© 2023 BBC. BBC không chịu trách nhiệm nội dung các trang ngoài. Tìm hiểu cách chúng tôi tiếp cận việc dẫn tới trang ngoài"`;

exports[`Canonical Most Read Page Header I can see the branding 1`] = `"BBC News, Tiếng Việt"`;

exports[`Canonical Most Read Page Header Navigation link should match text and url 1`] = `
{
  "text": "Tin chính",
  "url": "/vietnamese",
}
`;

exports[`Canonical Most Read Page Header Navigation link should match text and url 2`] = `
{
  "text": "Việt Nam",
  "url": "/vietnamese/topics/ckdxnx1x5rnt",
}
`;

exports[`Canonical Most Read Page Header Navigation link should match text and url 3`] = `
{
  "text": "Thế giới",
  "url": "/vietnamese/topics/cnlv9j1ekq0t",
}
`;

exports[`Canonical Most Read Page Header Navigation link should match text and url 4`] = `
{
  "text": "Kinh tế",
  "url": "/vietnamese/topics/cez1ey7nzj3t",
}
`;

exports[`Canonical Most Read Page Header Navigation link should match text and url 5`] = `
{
  "text": "Thể thao",
  "url": "/vietnamese/topics/ckdxnx1k7zxt",
}
`;

exports[`Canonical Most Read Page Header Navigation link should match text and url 6`] = `
{
  "text": "Video",
  "url": "/vietnamese/topics/cl29j0ekkvdt",
}
`;

exports[`Canonical Most Read Page I can see the headline 1`] = `"Lỗi mạng nội bộ"`;

exports[`Canonical Most Read Page Main heading should match text 1`] = `"Lỗi mạng nội bộ"`;

exports[`Canonical Most Read Page SEO Canonical link 1`] = `"http://localhost:7080/vietnamese/popular/read"`;

exports[`Canonical Most Read Page SEO Dir attribute 1`] = `"ltr"`;

exports[`Canonical Most Read Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical Most Read Page SEO Heading level 1 1`] = `"Lỗi mạng nội bộ"`;

exports[`Canonical Most Read Page SEO Lang attribute 1`] = `"vi"`;

exports[`Canonical Most Read Page SEO OG description 1`] = `"Đọc nhiều nhất - BBC News Tiếng Việt"`;

exports[`Canonical Most Read Page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/vietnamese.png"`;

exports[`Canonical Most Read Page SEO OG image alt 1`] = `"BBC News Tiếng Việt"`;

exports[`Canonical Most Read Page SEO OG locale 1`] = `"vi-VN"`;

exports[`Canonical Most Read Page SEO OG site name 1`] = `"BBC News Tiếng Việt"`;

exports[`Canonical Most Read Page SEO OG title 1`] = `"Đọc nhiều nhất - BBC News Tiếng Việt"`;

exports[`Canonical Most Read Page SEO OG type 1`] = `"website"`;

exports[`Canonical Most Read Page SEO OG url 1`] = `"http://localhost:7080/vietnamese/popular/read"`;

exports[`Canonical Most Read Page SEO Page title 1`] = `"Lỗi mạng nội bộ - BBC News Tiếng Việt"`;

exports[`Canonical Most Read Page SEO Robots meta tag 1`] = `"noindex,nofollow"`;

exports[`Canonical Most Read Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical Most Read Page SEO Twitter creator 1`] = `"@bbcvietnamese"`;

exports[`Canonical Most Read Page SEO Twitter description 1`] = `"Lỗi mạng nội bộ"`;

exports[`Canonical Most Read Page SEO Twitter image alt 1`] = `"BBC News Tiếng Việt"`;

exports[`Canonical Most Read Page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/vietnamese.png"`;

exports[`Canonical Most Read Page SEO Twitter site 1`] = `"@bbcvietnamese"`;

exports[`Canonical Most Read Page SEO Twitter title 1`] = `"Lỗi mạng nội bộ - BBC News Tiếng Việt"`;
